feat: init user module
